// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BlogCategoryScreen renders the blog category screen 1`] = `
.emotion-0 {
  width: var(--yony-sizes-full);
  top: 0px;
  z-index: var(--yony-zIndices-banner);
  left: 0px;
  box-shadow: var(--yony-shadows-xs);
}

.chakra-ui-dark .emotion-0:not([data-theme]),
[data-theme=dark] .emotion-0:not([data-theme]),
.emotion-0[data-theme=dark] {
  box-shadow: var(--yony-shadows-lg);
}

.emotion-1 {
  width: 100%;
  -webkit-margin-start: auto;
  margin-inline-start: auto;
  -webkit-margin-end: auto;
  margin-inline-end: auto;
  max-width: var(--yony-sizes-container-md);
  -webkit-padding-start: var(--yony-space-4);
  padding-inline-start: var(--yony-space-4);
  -webkit-padding-end: var(--yony-space-4);
  padding-inline-end: var(--yony-space-4);
  padding-top: var(--yony-space-5);
  padding-bottom: var(--yony-space-5);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

@media screen and (min-width: 48em) {
  .emotion-1 {
    padding-top: var(--yony-space-8);
    padding-bottom: var(--yony-space-8);
  }
}

.emotion-2 {
  transition-property: var(--yony-transition-property-common);
  transition-duration: var(--yony-transition-duration-fast);
  transition-timing-function: var(--yony-transition-easing-ease-out);
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  outline: 2px solid transparent;
  outline-offset: 2px;
  color: inherit;
  display: contents;
}

.emotion-2:hover,
.emotion-2[data-hover] {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-2:focus-visible,
.emotion-2[data-focus-visible] {
  box-shadow: var(--yony-shadows-outline);
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.emotion-3>*:not(style)~*:not(style) {
  margin-top: 0px;
  -webkit-margin-end: 0px;
  margin-inline-end: 0px;
  margin-bottom: 0px;
  -webkit-margin-start: var(--yony-space-4);
  margin-inline-start: var(--yony-space-4);
}

.emotion-4 {
  transition-property: var(--yony-transition-property-common);
  transition-duration: var(--yony-transition-duration-fast);
  transition-timing-function: var(--yony-transition-easing-ease-out);
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  outline: 2px solid transparent;
  outline-offset: 2px;
  color: var(--yony-colors-primary-500);
  font-weight: var(--yony-fontWeights-bold);
}

.emotion-4:hover,
.emotion-4[data-hover] {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-4:focus-visible,
.emotion-4[data-focus-visible] {
  box-shadow: var(--yony-shadows-outline);
}

.emotion-6 {
  width: 100%;
  -webkit-margin-start: auto;
  margin-inline-start: auto;
  -webkit-margin-end: auto;
  margin-inline-end: auto;
  max-width: var(--yony-sizes-container-md);
  -webkit-padding-start: var(--yony-space-4);
  padding-inline-start: var(--yony-space-4);
  -webkit-padding-end: var(--yony-space-4);
  padding-inline-end: var(--yony-space-4);
  padding-top: var(--yony-space-6);
  padding-bottom: var(--yony-space-12);
}

.emotion-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-7>*:not(style)~*:not(style) {
  margin-top: var(--yony-space-2);
  -webkit-margin-end: 0px;
  margin-inline-end: 0px;
  margin-bottom: 0px;
  -webkit-margin-start: 0px;
  margin-inline-start: 0px;
}

@media screen and (min-width: 48em) {
  .emotion-7>*:not(style)~*:not(style) {
    margin-top: var(--yony-space-5);
  }
}

.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-10 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-11 {
  transition-property: var(--yony-transition-property-common);
  transition-duration: var(--yony-transition-duration-fast);
  transition-timing-function: var(--yony-transition-easing-ease-out);
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  outline: 2px solid transparent;
  outline-offset: 2px;
  color: inherit;
}

.emotion-11:hover,
.emotion-11[data-hover] {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-11:focus-visible,
.emotion-11[data-focus-visible] {
  box-shadow: var(--yony-shadows-outline);
}

.emotion-12 {
  -webkit-margin-start: 8px;
  margin-inline-start: 8px;
  -webkit-margin-end: 8px;
  margin-inline-end: 8px;
}

.emotion-21 {
  font-family: var(--yony-fonts-heading);
  font-weight: var(--yony-fontWeights-bold);
  font-size: var(--yony-fontSizes-3xl);
  line-height: 1.33;
}

@media screen and (min-width: 48em) {
  .emotion-21 {
    font-size: var(--yony-fontSizes-4xl);
    line-height: 1.2;
  }
}

.emotion-22 {
  color: gray;
  font-style: italic;
}

.emotion-23 {
  margin-top: 1.25rem;
  line-height: 1.7;
}

blockquote .emotion-23 {
  margin-top: 0px;
}

.emotion-24 {
  list-style-type: initial;
  -webkit-margin-start: 1em;
  margin-inline-start: 1em;
  margin-top: var(--yony-space-6);
}

.emotion-25 {
  padding-top: var(--yony-space-12);
  padding-bottom: var(--yony-space-12);
}

.emotion-26 {
  width: 100%;
  -webkit-margin-start: auto;
  margin-inline-start: auto;
  -webkit-margin-end: auto;
  margin-inline-end: auto;
  max-width: var(--yony-sizes-container-md);
  -webkit-padding-start: var(--yony-space-4);
  padding-inline-start: var(--yony-space-4);
  -webkit-padding-end: var(--yony-space-4);
  padding-inline-end: var(--yony-space-4);
}

.emotion-27 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-27>*:not(style)~*:not(style) {
  margin-top: 0.5rem;
  -webkit-margin-end: 0px;
  margin-inline-end: 0px;
  margin-bottom: 0px;
  -webkit-margin-start: 0px;
  margin-inline-start: 0px;
}

.emotion-28 {
  font-weight: var(--yony-fontWeights-bold);
}

.emotion-29 {
  color: var(--yony-colors-gray-600);
}

.emotion-30 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  position: relative;
  white-space: nowrap;
  vertical-align: baseline;
  outline: 2px solid transparent;
  outline-offset: 2px;
  line-height: var(--yony-lineHeights-normal);
  border-radius: var(--yony-radii-md);
  font-weight: var(--yony-fontWeights-semibold);
  transition-property: var(--yony-transition-property-common);
  transition-duration: var(--yony-transition-duration-normal);
  height: auto;
  min-width: var(--yony-sizes-10);
  font-size: var(--yony-fontSizes-md);
  -webkit-padding-start: var(--yony-space-4);
  padding-inline-start: var(--yony-space-4);
  -webkit-padding-end: var(--yony-space-4);
  padding-inline-end: var(--yony-space-4);
  padding: 0px;
  color: var(--yony-colors-green-200);
}

.emotion-30:focus-visible,
.emotion-30[data-focus-visible] {
  box-shadow: var(--yony-shadows-outline);
}

.emotion-30:disabled,
.emotion-30[disabled],
.emotion-30[aria-disabled=true],
.emotion-30[data-disabled] {
  opacity: 0.4;
  cursor: not-allowed;
  box-shadow: var(--yony-shadows-none);
}

.emotion-30:hover,
.emotion-30[data-hover] {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-30:hover:disabled,
.emotion-30[data-hover]:disabled,
.emotion-30:hover[disabled],
.emotion-30[data-hover][disabled],
.emotion-30:hover[aria-disabled=true],
.emotion-30[data-hover][aria-disabled=true],
.emotion-30:hover[data-disabled],
.emotion-30[data-hover][data-disabled] {
  background: initial;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-30:active,
.emotion-30[data-active] {
  color: var(--yony-colors-green-500);
}

.emotion-31 {
  font-family: var(--yony-fonts-mono);
  background: whiteAlpha;
  border-radius: var(--yony-radii-md);
  border-width: 1px;
  border-bottom-width: 3px;
  font-size: 0.8em;
  font-weight: var(--yony-fontWeights-bold);
  line-height: var(--yony-lineHeights-normal);
  -webkit-padding-start: 0.4em;
  padding-inline-start: 0.4em;
  -webkit-padding-end: 0.4em;
  padding-inline-end: 0.4em;
  white-space: nowrap;
  -webkit-margin-start: var(--yony-space-2);
  margin-inline-start: var(--yony-space-2);
  -webkit-margin-end: var(--yony-space-2);
  margin-inline-end: var(--yony-space-2);
}

.emotion-33 {
  display: none;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: fixed;
  bottom: var(--yony-space-8);
  left: var(--yony-space-8);
}

.emotion-33>*:not(style)~*:not(style) {
  margin-top: var(--yony-space-5);
  -webkit-margin-end: 0px;
  margin-inline-end: 0px;
  margin-bottom: 0px;
  -webkit-margin-start: 0px;
  margin-inline-start: 0px;
}

@media screen and (min-width: 62em) {
  .emotion-33 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
  }
}

<body
  class="chakra-ui-dark"
>
  <div>
    <div
      class="emotion-0"
    >
      <div
        class="chakra-container emotion-1"
      >
        <a
          class="chakra-link emotion-2"
          href="/"
        >
          <span
            style="box-sizing: border-box; display: inline-block; overflow: hidden; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; position: relative; max-width: 100%;"
          >
            <span
              style="box-sizing: border-box; display: block; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; max-width: 100%;"
            >
              <img
                alt=""
                aria-hidden="true"
                src="data:image/svg+xml,%3csvg%20xmlns=%27http://www.w3.org/2000/svg%27%20version=%271.1%27%20width=%2732%27%20height=%2732%27/%3e"
                style="display: block; max-width: 100%; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px;"
              />
            </span>
            <img
              alt=""
              data-nimg="intrinsic"
              decoding="async"
              src="/_next/image?url=%2Fimg.jpg&w=64&q=75"
              srcset="/_next/image?url=%2Fimg.jpg&w=32&q=75 1x, /_next/image?url=%2Fimg.jpg&w=64&q=75 2x"
              style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
            />
          </span>
        </a>
        <div
          class="chakra-stack emotion-3"
        >
          <a
            class="chakra-link emotion-4"
            href="/projects"
          >
            Projects
          </a>
          <a
            class="chakra-link emotion-4"
            href="/me"
          >
            About Me
          </a>
        </div>
      </div>
    </div>
    <div>
      <div
        class="chakra-container emotion-6"
      >
        <header
          class="chakra-stack emotion-7"
        >
          <nav
            aria-label="breadcrumb"
            class="chakra-breadcrumb emotion-8"
          >
            <ol
              class="chakra-breadcrumb__list emotion-9"
            >
              <li
                class="chakra-breadcrumb__list-item emotion-10"
              >
                <a
                  class="chakra-breadcrumb__link emotion-11"
                  href="/"
                >
                  Home
                </a>
                <span
                  class="emotion-12"
                  role="presentation"
                >
                  <svg
                    color="gray.500"
                    fill="currentColor"
                    height="1em"
                    stroke="currentColor"
                    stroke-width="0"
                    viewBox="0 0 16 16"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M6.776 1.553a.5.5 0 0 1 .671.223l3 6a.5.5 0 0 1 0 .448l-3 6a.5.5 0 1 1-.894-.448L9.44 8 6.553 2.224a.5.5 0 0 1 .223-.671z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </li>
              <li
                class="chakra-breadcrumb__list-item emotion-10"
              >
                <a
                  class="chakra-breadcrumb__link emotion-11"
                  href="/blog"
                >
                  Blog
                </a>
                <span
                  class="emotion-12"
                  role="presentation"
                >
                  <svg
                    color="gray.500"
                    fill="currentColor"
                    height="1em"
                    stroke="currentColor"
                    stroke-width="0"
                    viewBox="0 0 16 16"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M6.776 1.553a.5.5 0 0 1 .671.223l3 6a.5.5 0 0 1 0 .448l-3 6a.5.5 0 1 1-.894-.448L9.44 8 6.553 2.224a.5.5 0 0 1 .223-.671z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </li>
              <li
                class="chakra-breadcrumb__list-item emotion-10"
              >
                <a
                  class="chakra-breadcrumb__link emotion-11"
                  href="/blog/categories"
                >
                  Categories
                </a>
                <span
                  class="emotion-12"
                  role="presentation"
                >
                  <svg
                    color="gray.500"
                    fill="currentColor"
                    height="1em"
                    stroke="currentColor"
                    stroke-width="0"
                    viewBox="0 0 16 16"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M6.776 1.553a.5.5 0 0 1 .671.223l3 6a.5.5 0 0 1 0 .448l-3 6a.5.5 0 1 1-.894-.448L9.44 8 6.553 2.224a.5.5 0 0 1 .223-.671z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </li>
              <li
                class="chakra-breadcrumb__list-item emotion-10"
              >
                <span
                  aria-current="page"
                  class="chakra-breadcrumb__link emotion-11"
                >
                  Cracking the Coding Interview
                </span>
              </li>
            </ol>
          </nav>
          <h2
            class="chakra-heading emotion-21"
          >
            Category: 
            Cracking the Coding Interview
          </h2>
          <p
            class="chakra-text emotion-22"
          >
            Last updated at 
            15 Oct, 2022
          </p>
        </header>
        <div
          data-testid="mdx-content"
        >
          <p
            class="emotion-23"
          >
            Cracking the Coding Interview: 189 Programming Questions and Solutions is a book by Gayle Laakmann McDowell about coding interviews.
          </p>
        </div>
        <ul
          aria-label="List of category's posts"
          class="emotion-24"
          role="list"
        />
      </div>
    </div>
    <footer
      class="emotion-25"
    >
      <div
        class="chakra-container emotion-26"
      >
        <div
          class="chakra-stack emotion-27"
        >
          <p
            class="chakra-text emotion-28"
          >
            Created By Yony Calsin
          </p>
          <p
            class="chakra-text emotion-29"
          >
            Built with Next.js, MDX, Chakra-Ui and Vercel
          </p>
          <button
            class="chakra-button emotion-30"
            type="button"
          >
            Press 
            <kbd
              class="chakra-kbd emotion-31"
            >
              Ctrl
            </kbd>
            +
            <kbd
              class="chakra-kbd emotion-31"
            >
              K
            </kbd>
             to start →
          </button>
        </div>
      </div>
    </footer>
    <div
      class="chakra-stack emotion-33"
    >
      <a
        class="chakra-link emotion-11"
        href="https://github.com/yonycalsin"
        rel="noreferrer"
        target="_blank"
      >
        Github
      </a>
      <a
        class="chakra-link emotion-11"
        href="https://www.linkedin.com/in/yonycalsin"
        rel="noreferrer"
        target="_blank"
      >
        Linkedin
      </a>
      <a
        class="chakra-link emotion-11"
        href="https://twitter.com/yonycalsin"
        rel="noreferrer"
        target="_blank"
      >
        Twitter
      </a>
      <a
        class="chakra-link emotion-11"
        href="mailto:helloyonycalsin@gmail.com"
        rel="noreferrer"
        target="_blank"
      >
        Email
      </a>
    </div>
    <span
      hidden=""
      id="__chakra_env"
    />
  </div>
  <div
    class="chakra-portal"
  >
    <ul
      aria-live="polite"
      id="chakra-toast-manager-top"
      role="region"
      style="position: fixed; z-index: 5500; pointer-events: none; display: flex; flex-direction: column; margin: 0px auto;"
    />
    <ul
      aria-live="polite"
      id="chakra-toast-manager-top-left"
      role="region"
      style="position: fixed; z-index: 5500; pointer-events: none; display: flex; flex-direction: column;"
    />
    <ul
      aria-live="polite"
      id="chakra-toast-manager-top-right"
      role="region"
      style="position: fixed; z-index: 5500; pointer-events: none; display: flex; flex-direction: column;"
    />
    <ul
      aria-live="polite"
      id="chakra-toast-manager-bottom-left"
      role="region"
      style="position: fixed; z-index: 5500; pointer-events: none; display: flex; flex-direction: column;"
    />
    <ul
      aria-live="polite"
      id="chakra-toast-manager-bottom"
      role="region"
      style="position: fixed; z-index: 5500; pointer-events: none; display: flex; flex-direction: column; margin: 0px auto;"
    />
    <ul
      aria-live="polite"
      id="chakra-toast-manager-bottom-right"
      role="region"
      style="position: fixed; z-index: 5500; pointer-events: none; display: flex; flex-direction: column;"
    />
  </div>
</body>
`;

exports[`BlogCategoryScreen renders the list of category's posts 1`] = `
{
  "asFragment": [Function],
  "baseElement": .emotion-0 {
  width: var(--yony-sizes-full);
  top: 0px;
  z-index: var(--yony-zIndices-banner);
  left: 0px;
  box-shadow: var(--yony-shadows-xs);
}

.chakra-ui-dark .emotion-0:not([data-theme]),
[data-theme=dark] .emotion-0:not([data-theme]),
.emotion-0[data-theme=dark] {
  box-shadow: var(--yony-shadows-lg);
}

.emotion-1 {
  width: 100%;
  -webkit-margin-start: auto;
  margin-inline-start: auto;
  -webkit-margin-end: auto;
  margin-inline-end: auto;
  max-width: var(--yony-sizes-container-md);
  -webkit-padding-start: var(--yony-space-4);
  padding-inline-start: var(--yony-space-4);
  -webkit-padding-end: var(--yony-space-4);
  padding-inline-end: var(--yony-space-4);
  padding-top: var(--yony-space-5);
  padding-bottom: var(--yony-space-5);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

@media screen and (min-width: 48em) {
  .emotion-1 {
    padding-top: var(--yony-space-8);
    padding-bottom: var(--yony-space-8);
  }
}

.emotion-2 {
  transition-property: var(--yony-transition-property-common);
  transition-duration: var(--yony-transition-duration-fast);
  transition-timing-function: var(--yony-transition-easing-ease-out);
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  outline: 2px solid transparent;
  outline-offset: 2px;
  color: inherit;
  display: contents;
}

.emotion-2:hover,
.emotion-2[data-hover] {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-2:focus-visible,
.emotion-2[data-focus-visible] {
  box-shadow: var(--yony-shadows-outline);
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.emotion-3>*:not(style)~*:not(style) {
  margin-top: 0px;
  -webkit-margin-end: 0px;
  margin-inline-end: 0px;
  margin-bottom: 0px;
  -webkit-margin-start: var(--yony-space-4);
  margin-inline-start: var(--yony-space-4);
}

.emotion-4 {
  transition-property: var(--yony-transition-property-common);
  transition-duration: var(--yony-transition-duration-fast);
  transition-timing-function: var(--yony-transition-easing-ease-out);
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  outline: 2px solid transparent;
  outline-offset: 2px;
  color: var(--yony-colors-primary-500);
  font-weight: var(--yony-fontWeights-bold);
}

.emotion-4:hover,
.emotion-4[data-hover] {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-4:focus-visible,
.emotion-4[data-focus-visible] {
  box-shadow: var(--yony-shadows-outline);
}

.emotion-6 {
  width: 100%;
  -webkit-margin-start: auto;
  margin-inline-start: auto;
  -webkit-margin-end: auto;
  margin-inline-end: auto;
  max-width: var(--yony-sizes-container-md);
  -webkit-padding-start: var(--yony-space-4);
  padding-inline-start: var(--yony-space-4);
  -webkit-padding-end: var(--yony-space-4);
  padding-inline-end: var(--yony-space-4);
  padding-top: var(--yony-space-6);
  padding-bottom: var(--yony-space-12);
}

.emotion-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-7>*:not(style)~*:not(style) {
  margin-top: var(--yony-space-2);
  -webkit-margin-end: 0px;
  margin-inline-end: 0px;
  margin-bottom: 0px;
  -webkit-margin-start: 0px;
  margin-inline-start: 0px;
}

@media screen and (min-width: 48em) {
  .emotion-7>*:not(style)~*:not(style) {
    margin-top: var(--yony-space-5);
  }
}

.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-10 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-11 {
  transition-property: var(--yony-transition-property-common);
  transition-duration: var(--yony-transition-duration-fast);
  transition-timing-function: var(--yony-transition-easing-ease-out);
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  outline: 2px solid transparent;
  outline-offset: 2px;
  color: inherit;
}

.emotion-11:hover,
.emotion-11[data-hover] {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-11:focus-visible,
.emotion-11[data-focus-visible] {
  box-shadow: var(--yony-shadows-outline);
}

.emotion-12 {
  -webkit-margin-start: 8px;
  margin-inline-start: 8px;
  -webkit-margin-end: 8px;
  margin-inline-end: 8px;
}

.emotion-21 {
  font-family: var(--yony-fonts-heading);
  font-weight: var(--yony-fontWeights-bold);
  font-size: var(--yony-fontSizes-3xl);
  line-height: 1.33;
}

@media screen and (min-width: 48em) {
  .emotion-21 {
    font-size: var(--yony-fontSizes-4xl);
    line-height: 1.2;
  }
}

.emotion-22 {
  color: gray;
  font-style: italic;
}

.emotion-23 {
  margin-top: 1.25rem;
  line-height: 1.7;
}

blockquote .emotion-23 {
  margin-top: 0px;
}

.emotion-24 {
  list-style-type: initial;
  -webkit-margin-start: 1em;
  margin-inline-start: 1em;
  margin-top: var(--yony-space-6);
}

.emotion-27 {
  padding-top: var(--yony-space-12);
  padding-bottom: var(--yony-space-12);
}

.emotion-28 {
  width: 100%;
  -webkit-margin-start: auto;
  margin-inline-start: auto;
  -webkit-margin-end: auto;
  margin-inline-end: auto;
  max-width: var(--yony-sizes-container-md);
  -webkit-padding-start: var(--yony-space-4);
  padding-inline-start: var(--yony-space-4);
  -webkit-padding-end: var(--yony-space-4);
  padding-inline-end: var(--yony-space-4);
}

.emotion-29 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-29>*:not(style)~*:not(style) {
  margin-top: 0.5rem;
  -webkit-margin-end: 0px;
  margin-inline-end: 0px;
  margin-bottom: 0px;
  -webkit-margin-start: 0px;
  margin-inline-start: 0px;
}

.emotion-30 {
  font-weight: var(--yony-fontWeights-bold);
}

.emotion-31 {
  color: var(--yony-colors-gray-600);
}

.emotion-32 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  position: relative;
  white-space: nowrap;
  vertical-align: baseline;
  outline: 2px solid transparent;
  outline-offset: 2px;
  line-height: var(--yony-lineHeights-normal);
  border-radius: var(--yony-radii-md);
  font-weight: var(--yony-fontWeights-semibold);
  transition-property: var(--yony-transition-property-common);
  transition-duration: var(--yony-transition-duration-normal);
  height: auto;
  min-width: var(--yony-sizes-10);
  font-size: var(--yony-fontSizes-md);
  -webkit-padding-start: var(--yony-space-4);
  padding-inline-start: var(--yony-space-4);
  -webkit-padding-end: var(--yony-space-4);
  padding-inline-end: var(--yony-space-4);
  padding: 0px;
  color: var(--yony-colors-green-200);
}

.emotion-32:focus-visible,
.emotion-32[data-focus-visible] {
  box-shadow: var(--yony-shadows-outline);
}

.emotion-32:disabled,
.emotion-32[disabled],
.emotion-32[aria-disabled=true],
.emotion-32[data-disabled] {
  opacity: 0.4;
  cursor: not-allowed;
  box-shadow: var(--yony-shadows-none);
}

.emotion-32:hover,
.emotion-32[data-hover] {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-32:hover:disabled,
.emotion-32[data-hover]:disabled,
.emotion-32:hover[disabled],
.emotion-32[data-hover][disabled],
.emotion-32:hover[aria-disabled=true],
.emotion-32[data-hover][aria-disabled=true],
.emotion-32:hover[data-disabled],
.emotion-32[data-hover][data-disabled] {
  background: initial;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-32:active,
.emotion-32[data-active] {
  color: var(--yony-colors-green-500);
}

.emotion-33 {
  font-family: var(--yony-fonts-mono);
  background: whiteAlpha;
  border-radius: var(--yony-radii-md);
  border-width: 1px;
  border-bottom-width: 3px;
  font-size: 0.8em;
  font-weight: var(--yony-fontWeights-bold);
  line-height: var(--yony-lineHeights-normal);
  -webkit-padding-start: 0.4em;
  padding-inline-start: 0.4em;
  -webkit-padding-end: 0.4em;
  padding-inline-end: 0.4em;
  white-space: nowrap;
  -webkit-margin-start: var(--yony-space-2);
  margin-inline-start: var(--yony-space-2);
  -webkit-margin-end: var(--yony-space-2);
  margin-inline-end: var(--yony-space-2);
}

.emotion-35 {
  display: none;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: fixed;
  bottom: var(--yony-space-8);
  left: var(--yony-space-8);
}

.emotion-35>*:not(style)~*:not(style) {
  margin-top: var(--yony-space-5);
  -webkit-margin-end: 0px;
  margin-inline-end: 0px;
  margin-bottom: 0px;
  -webkit-margin-start: 0px;
  margin-inline-start: 0px;
}

@media screen and (min-width: 62em) {
  .emotion-35 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
  }
}

<body
    class="chakra-ui-dark"
  >
    <div>
      <div
        class="emotion-0"
      >
        <div
          class="chakra-container emotion-1"
        >
          <a
            class="chakra-link emotion-2"
            href="/"
          >
            <span
              style="box-sizing: border-box; display: inline-block; overflow: hidden; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; position: relative; max-width: 100%;"
            >
              <span
                style="box-sizing: border-box; display: block; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; max-width: 100%;"
              >
                <img
                  alt=""
                  aria-hidden="true"
                  src="data:image/svg+xml,%3csvg%20xmlns=%27http://www.w3.org/2000/svg%27%20version=%271.1%27%20width=%2732%27%20height=%2732%27/%3e"
                  style="display: block; max-width: 100%; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px;"
                />
              </span>
              <img
                alt=""
                data-nimg="intrinsic"
                decoding="async"
                src="/_next/image?url=%2Fimg.jpg&w=64&q=75"
                srcset="/_next/image?url=%2Fimg.jpg&w=32&q=75 1x, /_next/image?url=%2Fimg.jpg&w=64&q=75 2x"
                style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
              />
            </span>
          </a>
          <div
            class="chakra-stack emotion-3"
          >
            <a
              class="chakra-link emotion-4"
              href="/projects"
            >
              Projects
            </a>
            <a
              class="chakra-link emotion-4"
              href="/me"
            >
              About Me
            </a>
          </div>
        </div>
      </div>
      <div>
        <div
          class="chakra-container emotion-6"
        >
          <header
            class="chakra-stack emotion-7"
          >
            <nav
              aria-label="breadcrumb"
              class="chakra-breadcrumb emotion-8"
            >
              <ol
                class="chakra-breadcrumb__list emotion-9"
              >
                <li
                  class="chakra-breadcrumb__list-item emotion-10"
                >
                  <a
                    class="chakra-breadcrumb__link emotion-11"
                    href="/"
                  >
                    Home
                  </a>
                  <span
                    class="emotion-12"
                    role="presentation"
                  >
                    <svg
                      color="gray.500"
                      fill="currentColor"
                      height="1em"
                      stroke="currentColor"
                      stroke-width="0"
                      viewBox="0 0 16 16"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M6.776 1.553a.5.5 0 0 1 .671.223l3 6a.5.5 0 0 1 0 .448l-3 6a.5.5 0 1 1-.894-.448L9.44 8 6.553 2.224a.5.5 0 0 1 .223-.671z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                </li>
                <li
                  class="chakra-breadcrumb__list-item emotion-10"
                >
                  <a
                    class="chakra-breadcrumb__link emotion-11"
                    href="/blog"
                  >
                    Blog
                  </a>
                  <span
                    class="emotion-12"
                    role="presentation"
                  >
                    <svg
                      color="gray.500"
                      fill="currentColor"
                      height="1em"
                      stroke="currentColor"
                      stroke-width="0"
                      viewBox="0 0 16 16"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M6.776 1.553a.5.5 0 0 1 .671.223l3 6a.5.5 0 0 1 0 .448l-3 6a.5.5 0 1 1-.894-.448L9.44 8 6.553 2.224a.5.5 0 0 1 .223-.671z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                </li>
                <li
                  class="chakra-breadcrumb__list-item emotion-10"
                >
                  <a
                    class="chakra-breadcrumb__link emotion-11"
                    href="/blog/categories"
                  >
                    Categories
                  </a>
                  <span
                    class="emotion-12"
                    role="presentation"
                  >
                    <svg
                      color="gray.500"
                      fill="currentColor"
                      height="1em"
                      stroke="currentColor"
                      stroke-width="0"
                      viewBox="0 0 16 16"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M6.776 1.553a.5.5 0 0 1 .671.223l3 6a.5.5 0 0 1 0 .448l-3 6a.5.5 0 1 1-.894-.448L9.44 8 6.553 2.224a.5.5 0 0 1 .223-.671z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                </li>
                <li
                  class="chakra-breadcrumb__list-item emotion-10"
                >
                  <span
                    aria-current="page"
                    class="chakra-breadcrumb__link emotion-11"
                  >
                    Cracking the Coding Interview
                  </span>
                </li>
              </ol>
            </nav>
            <h2
              class="chakra-heading emotion-21"
            >
              Category: 
              Cracking the Coding Interview
            </h2>
            <p
              class="chakra-text emotion-22"
            >
              Last updated at 
              15 Oct, 2022
            </p>
          </header>
          <div
            data-testid="mdx-content"
          >
            <p
              class="emotion-23"
            >
              Cracking the Coding Interview: 189 Programming Questions and Solutions is a book by Gayle Laakmann McDowell about coding interviews.
            </p>
          </div>
          <ul
            aria-label="List of category's posts"
            class="emotion-24"
            role="list"
          >
            <a
              class="chakra-link emotion-11"
              href="/blog/how-to-mock-a-rest-api"
            >
              <li
                class="emotion-8"
              >
                How to mock a rest api
              </li>
            </a>
          </ul>
        </div>
      </div>
      <footer
        class="emotion-27"
      >
        <div
          class="chakra-container emotion-28"
        >
          <div
            class="chakra-stack emotion-29"
          >
            <p
              class="chakra-text emotion-30"
            >
              Created By Yony Calsin
            </p>
            <p
              class="chakra-text emotion-31"
            >
              Built with Next.js, MDX, Chakra-Ui and Vercel
            </p>
            <button
              class="chakra-button emotion-32"
              type="button"
            >
              Press 
              <kbd
                class="chakra-kbd emotion-33"
              >
                Ctrl
              </kbd>
              +
              <kbd
                class="chakra-kbd emotion-33"
              >
                K
              </kbd>
               to start →
            </button>
          </div>
        </div>
      </footer>
      <div
        class="chakra-stack emotion-35"
      >
        <a
          class="chakra-link emotion-11"
          href="https://github.com/yonycalsin"
          rel="noreferrer"
          target="_blank"
        >
          Github
        </a>
        <a
          class="chakra-link emotion-11"
          href="https://www.linkedin.com/in/yonycalsin"
          rel="noreferrer"
          target="_blank"
        >
          Linkedin
        </a>
        <a
          class="chakra-link emotion-11"
          href="https://twitter.com/yonycalsin"
          rel="noreferrer"
          target="_blank"
        >
          Twitter
        </a>
        <a
          class="chakra-link emotion-11"
          href="mailto:helloyonycalsin@gmail.com"
          rel="noreferrer"
          target="_blank"
        >
          Email
        </a>
      </div>
      <span
        hidden=""
        id="__chakra_env"
      />
    </div>
    <div
      class="chakra-portal"
    >
      <ul
        aria-live="polite"
        id="chakra-toast-manager-top"
        role="region"
        style="position: fixed; z-index: 5500; pointer-events: none; display: flex; flex-direction: column; margin: 0px auto;"
      />
      <ul
        aria-live="polite"
        id="chakra-toast-manager-top-left"
        role="region"
        style="position: fixed; z-index: 5500; pointer-events: none; display: flex; flex-direction: column;"
      />
      <ul
        aria-live="polite"
        id="chakra-toast-manager-top-right"
        role="region"
        style="position: fixed; z-index: 5500; pointer-events: none; display: flex; flex-direction: column;"
      />
      <ul
        aria-live="polite"
        id="chakra-toast-manager-bottom-left"
        role="region"
        style="position: fixed; z-index: 5500; pointer-events: none; display: flex; flex-direction: column;"
      />
      <ul
        aria-live="polite"
        id="chakra-toast-manager-bottom"
        role="region"
        style="position: fixed; z-index: 5500; pointer-events: none; display: flex; flex-direction: column; margin: 0px auto;"
      />
      <ul
        aria-live="polite"
        id="chakra-toast-manager-bottom-right"
        role="region"
        style="position: fixed; z-index: 5500; pointer-events: none; display: flex; flex-direction: column;"
      />
    </div>
  </body>,
  "container": .emotion-0 {
  width: var(--yony-sizes-full);
  top: 0px;
  z-index: var(--yony-zIndices-banner);
  left: 0px;
  box-shadow: var(--yony-shadows-xs);
}

.chakra-ui-dark .emotion-0:not([data-theme]),
[data-theme=dark] .emotion-0:not([data-theme]),
.emotion-0[data-theme=dark] {
  box-shadow: var(--yony-shadows-lg);
}

.emotion-1 {
  width: 100%;
  -webkit-margin-start: auto;
  margin-inline-start: auto;
  -webkit-margin-end: auto;
  margin-inline-end: auto;
  max-width: var(--yony-sizes-container-md);
  -webkit-padding-start: var(--yony-space-4);
  padding-inline-start: var(--yony-space-4);
  -webkit-padding-end: var(--yony-space-4);
  padding-inline-end: var(--yony-space-4);
  padding-top: var(--yony-space-5);
  padding-bottom: var(--yony-space-5);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

@media screen and (min-width: 48em) {
  .emotion-1 {
    padding-top: var(--yony-space-8);
    padding-bottom: var(--yony-space-8);
  }
}

.emotion-2 {
  transition-property: var(--yony-transition-property-common);
  transition-duration: var(--yony-transition-duration-fast);
  transition-timing-function: var(--yony-transition-easing-ease-out);
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  outline: 2px solid transparent;
  outline-offset: 2px;
  color: inherit;
  display: contents;
}

.emotion-2:hover,
.emotion-2[data-hover] {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-2:focus-visible,
.emotion-2[data-focus-visible] {
  box-shadow: var(--yony-shadows-outline);
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.emotion-3>*:not(style)~*:not(style) {
  margin-top: 0px;
  -webkit-margin-end: 0px;
  margin-inline-end: 0px;
  margin-bottom: 0px;
  -webkit-margin-start: var(--yony-space-4);
  margin-inline-start: var(--yony-space-4);
}

.emotion-4 {
  transition-property: var(--yony-transition-property-common);
  transition-duration: var(--yony-transition-duration-fast);
  transition-timing-function: var(--yony-transition-easing-ease-out);
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  outline: 2px solid transparent;
  outline-offset: 2px;
  color: var(--yony-colors-primary-500);
  font-weight: var(--yony-fontWeights-bold);
}

.emotion-4:hover,
.emotion-4[data-hover] {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-4:focus-visible,
.emotion-4[data-focus-visible] {
  box-shadow: var(--yony-shadows-outline);
}

.emotion-6 {
  width: 100%;
  -webkit-margin-start: auto;
  margin-inline-start: auto;
  -webkit-margin-end: auto;
  margin-inline-end: auto;
  max-width: var(--yony-sizes-container-md);
  -webkit-padding-start: var(--yony-space-4);
  padding-inline-start: var(--yony-space-4);
  -webkit-padding-end: var(--yony-space-4);
  padding-inline-end: var(--yony-space-4);
  padding-top: var(--yony-space-6);
  padding-bottom: var(--yony-space-12);
}

.emotion-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-7>*:not(style)~*:not(style) {
  margin-top: var(--yony-space-2);
  -webkit-margin-end: 0px;
  margin-inline-end: 0px;
  margin-bottom: 0px;
  -webkit-margin-start: 0px;
  margin-inline-start: 0px;
}

@media screen and (min-width: 48em) {
  .emotion-7>*:not(style)~*:not(style) {
    margin-top: var(--yony-space-5);
  }
}

.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-10 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-11 {
  transition-property: var(--yony-transition-property-common);
  transition-duration: var(--yony-transition-duration-fast);
  transition-timing-function: var(--yony-transition-easing-ease-out);
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  outline: 2px solid transparent;
  outline-offset: 2px;
  color: inherit;
}

.emotion-11:hover,
.emotion-11[data-hover] {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-11:focus-visible,
.emotion-11[data-focus-visible] {
  box-shadow: var(--yony-shadows-outline);
}

.emotion-12 {
  -webkit-margin-start: 8px;
  margin-inline-start: 8px;
  -webkit-margin-end: 8px;
  margin-inline-end: 8px;
}

.emotion-21 {
  font-family: var(--yony-fonts-heading);
  font-weight: var(--yony-fontWeights-bold);
  font-size: var(--yony-fontSizes-3xl);
  line-height: 1.33;
}

@media screen and (min-width: 48em) {
  .emotion-21 {
    font-size: var(--yony-fontSizes-4xl);
    line-height: 1.2;
  }
}

.emotion-22 {
  color: gray;
  font-style: italic;
}

.emotion-23 {
  margin-top: 1.25rem;
  line-height: 1.7;
}

blockquote .emotion-23 {
  margin-top: 0px;
}

.emotion-24 {
  list-style-type: initial;
  -webkit-margin-start: 1em;
  margin-inline-start: 1em;
  margin-top: var(--yony-space-6);
}

.emotion-27 {
  padding-top: var(--yony-space-12);
  padding-bottom: var(--yony-space-12);
}

.emotion-28 {
  width: 100%;
  -webkit-margin-start: auto;
  margin-inline-start: auto;
  -webkit-margin-end: auto;
  margin-inline-end: auto;
  max-width: var(--yony-sizes-container-md);
  -webkit-padding-start: var(--yony-space-4);
  padding-inline-start: var(--yony-space-4);
  -webkit-padding-end: var(--yony-space-4);
  padding-inline-end: var(--yony-space-4);
}

.emotion-29 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-29>*:not(style)~*:not(style) {
  margin-top: 0.5rem;
  -webkit-margin-end: 0px;
  margin-inline-end: 0px;
  margin-bottom: 0px;
  -webkit-margin-start: 0px;
  margin-inline-start: 0px;
}

.emotion-30 {
  font-weight: var(--yony-fontWeights-bold);
}

.emotion-31 {
  color: var(--yony-colors-gray-600);
}

.emotion-32 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  position: relative;
  white-space: nowrap;
  vertical-align: baseline;
  outline: 2px solid transparent;
  outline-offset: 2px;
  line-height: var(--yony-lineHeights-normal);
  border-radius: var(--yony-radii-md);
  font-weight: var(--yony-fontWeights-semibold);
  transition-property: var(--yony-transition-property-common);
  transition-duration: var(--yony-transition-duration-normal);
  height: auto;
  min-width: var(--yony-sizes-10);
  font-size: var(--yony-fontSizes-md);
  -webkit-padding-start: var(--yony-space-4);
  padding-inline-start: var(--yony-space-4);
  -webkit-padding-end: var(--yony-space-4);
  padding-inline-end: var(--yony-space-4);
  padding: 0px;
  color: var(--yony-colors-green-200);
}

.emotion-32:focus-visible,
.emotion-32[data-focus-visible] {
  box-shadow: var(--yony-shadows-outline);
}

.emotion-32:disabled,
.emotion-32[disabled],
.emotion-32[aria-disabled=true],
.emotion-32[data-disabled] {
  opacity: 0.4;
  cursor: not-allowed;
  box-shadow: var(--yony-shadows-none);
}

.emotion-32:hover,
.emotion-32[data-hover] {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-32:hover:disabled,
.emotion-32[data-hover]:disabled,
.emotion-32:hover[disabled],
.emotion-32[data-hover][disabled],
.emotion-32:hover[aria-disabled=true],
.emotion-32[data-hover][aria-disabled=true],
.emotion-32:hover[data-disabled],
.emotion-32[data-hover][data-disabled] {
  background: initial;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-32:active,
.emotion-32[data-active] {
  color: var(--yony-colors-green-500);
}

.emotion-33 {
  font-family: var(--yony-fonts-mono);
  background: whiteAlpha;
  border-radius: var(--yony-radii-md);
  border-width: 1px;
  border-bottom-width: 3px;
  font-size: 0.8em;
  font-weight: var(--yony-fontWeights-bold);
  line-height: var(--yony-lineHeights-normal);
  -webkit-padding-start: 0.4em;
  padding-inline-start: 0.4em;
  -webkit-padding-end: 0.4em;
  padding-inline-end: 0.4em;
  white-space: nowrap;
  -webkit-margin-start: var(--yony-space-2);
  margin-inline-start: var(--yony-space-2);
  -webkit-margin-end: var(--yony-space-2);
  margin-inline-end: var(--yony-space-2);
}

.emotion-35 {
  display: none;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: fixed;
  bottom: var(--yony-space-8);
  left: var(--yony-space-8);
}

.emotion-35>*:not(style)~*:not(style) {
  margin-top: var(--yony-space-5);
  -webkit-margin-end: 0px;
  margin-inline-end: 0px;
  margin-bottom: 0px;
  -webkit-margin-start: 0px;
  margin-inline-start: 0px;
}

@media screen and (min-width: 62em) {
  .emotion-35 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
  }
}

<div>
    <div
      class="emotion-0"
    >
      <div
        class="chakra-container emotion-1"
      >
        <a
          class="chakra-link emotion-2"
          href="/"
        >
          <span
            style="box-sizing: border-box; display: inline-block; overflow: hidden; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; position: relative; max-width: 100%;"
          >
            <span
              style="box-sizing: border-box; display: block; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; max-width: 100%;"
            >
              <img
                alt=""
                aria-hidden="true"
                src="data:image/svg+xml,%3csvg%20xmlns=%27http://www.w3.org/2000/svg%27%20version=%271.1%27%20width=%2732%27%20height=%2732%27/%3e"
                style="display: block; max-width: 100%; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px;"
              />
            </span>
            <img
              alt=""
              data-nimg="intrinsic"
              decoding="async"
              src="/_next/image?url=%2Fimg.jpg&w=64&q=75"
              srcset="/_next/image?url=%2Fimg.jpg&w=32&q=75 1x, /_next/image?url=%2Fimg.jpg&w=64&q=75 2x"
              style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
            />
          </span>
        </a>
        <div
          class="chakra-stack emotion-3"
        >
          <a
            class="chakra-link emotion-4"
            href="/projects"
          >
            Projects
          </a>
          <a
            class="chakra-link emotion-4"
            href="/me"
          >
            About Me
          </a>
        </div>
      </div>
    </div>
    <div>
      <div
        class="chakra-container emotion-6"
      >
        <header
          class="chakra-stack emotion-7"
        >
          <nav
            aria-label="breadcrumb"
            class="chakra-breadcrumb emotion-8"
          >
            <ol
              class="chakra-breadcrumb__list emotion-9"
            >
              <li
                class="chakra-breadcrumb__list-item emotion-10"
              >
                <a
                  class="chakra-breadcrumb__link emotion-11"
                  href="/"
                >
                  Home
                </a>
                <span
                  class="emotion-12"
                  role="presentation"
                >
                  <svg
                    color="gray.500"
                    fill="currentColor"
                    height="1em"
                    stroke="currentColor"
                    stroke-width="0"
                    viewBox="0 0 16 16"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M6.776 1.553a.5.5 0 0 1 .671.223l3 6a.5.5 0 0 1 0 .448l-3 6a.5.5 0 1 1-.894-.448L9.44 8 6.553 2.224a.5.5 0 0 1 .223-.671z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </li>
              <li
                class="chakra-breadcrumb__list-item emotion-10"
              >
                <a
                  class="chakra-breadcrumb__link emotion-11"
                  href="/blog"
                >
                  Blog
                </a>
                <span
                  class="emotion-12"
                  role="presentation"
                >
                  <svg
                    color="gray.500"
                    fill="currentColor"
                    height="1em"
                    stroke="currentColor"
                    stroke-width="0"
                    viewBox="0 0 16 16"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M6.776 1.553a.5.5 0 0 1 .671.223l3 6a.5.5 0 0 1 0 .448l-3 6a.5.5 0 1 1-.894-.448L9.44 8 6.553 2.224a.5.5 0 0 1 .223-.671z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </li>
              <li
                class="chakra-breadcrumb__list-item emotion-10"
              >
                <a
                  class="chakra-breadcrumb__link emotion-11"
                  href="/blog/categories"
                >
                  Categories
                </a>
                <span
                  class="emotion-12"
                  role="presentation"
                >
                  <svg
                    color="gray.500"
                    fill="currentColor"
                    height="1em"
                    stroke="currentColor"
                    stroke-width="0"
                    viewBox="0 0 16 16"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M6.776 1.553a.5.5 0 0 1 .671.223l3 6a.5.5 0 0 1 0 .448l-3 6a.5.5 0 1 1-.894-.448L9.44 8 6.553 2.224a.5.5 0 0 1 .223-.671z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </li>
              <li
                class="chakra-breadcrumb__list-item emotion-10"
              >
                <span
                  aria-current="page"
                  class="chakra-breadcrumb__link emotion-11"
                >
                  Cracking the Coding Interview
                </span>
              </li>
            </ol>
          </nav>
          <h2
            class="chakra-heading emotion-21"
          >
            Category: 
            Cracking the Coding Interview
          </h2>
          <p
            class="chakra-text emotion-22"
          >
            Last updated at 
            15 Oct, 2022
          </p>
        </header>
        <div
          data-testid="mdx-content"
        >
          <p
            class="emotion-23"
          >
            Cracking the Coding Interview: 189 Programming Questions and Solutions is a book by Gayle Laakmann McDowell about coding interviews.
          </p>
        </div>
        <ul
          aria-label="List of category's posts"
          class="emotion-24"
          role="list"
        >
          <a
            class="chakra-link emotion-11"
            href="/blog/how-to-mock-a-rest-api"
          >
            <li
              class="emotion-8"
            >
              How to mock a rest api
            </li>
          </a>
        </ul>
      </div>
    </div>
    <footer
      class="emotion-27"
    >
      <div
        class="chakra-container emotion-28"
      >
        <div
          class="chakra-stack emotion-29"
        >
          <p
            class="chakra-text emotion-30"
          >
            Created By Yony Calsin
          </p>
          <p
            class="chakra-text emotion-31"
          >
            Built with Next.js, MDX, Chakra-Ui and Vercel
          </p>
          <button
            class="chakra-button emotion-32"
            type="button"
          >
            Press 
            <kbd
              class="chakra-kbd emotion-33"
            >
              Ctrl
            </kbd>
            +
            <kbd
              class="chakra-kbd emotion-33"
            >
              K
            </kbd>
             to start →
          </button>
        </div>
      </div>
    </footer>
    <div
      class="chakra-stack emotion-35"
    >
      <a
        class="chakra-link emotion-11"
        href="https://github.com/yonycalsin"
        rel="noreferrer"
        target="_blank"
      >
        Github
      </a>
      <a
        class="chakra-link emotion-11"
        href="https://www.linkedin.com/in/yonycalsin"
        rel="noreferrer"
        target="_blank"
      >
        Linkedin
      </a>
      <a
        class="chakra-link emotion-11"
        href="https://twitter.com/yonycalsin"
        rel="noreferrer"
        target="_blank"
      >
        Twitter
      </a>
      <a
        class="chakra-link emotion-11"
        href="mailto:helloyonycalsin@gmail.com"
        rel="noreferrer"
        target="_blank"
      >
        Email
      </a>
    </div>
    <span
      hidden=""
      id="__chakra_env"
    />
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
